--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
+<!--
+O tempo é o que resume a gente
+Todo tempo contigo é insuficiente
+
+Pra falar a verdade
+
+O tempo contigo é diferente
+Meu tempo com você te tenho nos braços
+Meu tempo sem você te tenho na mente
+
+Quanto tempo a gente esteve longe?
+Isso pra mim é indiferente
+Mas o tempo nunca foi eterno
+E a distância nunca foi o suficiente
+
+Pois como os ponteiros de um relógio
+Mesmo que eles se afastem um do outro
+Eu sei que alguma hora
+Eles vão se encontrar novamente
+-->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -106,55 +126,27 @@
     </style>
     <script type="text/javascript">
       function onBodyLoad() {
-        var st1 = document.getElementById('st1');
-        var st2 = document.getElementById('st2');
-        var st3 = document.getElementById('st3');
-        var st4 = document.getElementById('st4');
-        var st5 = document.getElementById('st5');
         var i = -900;
 
-        setTimeout(() => {st1.style.display = "initial";}, (i += 900));
-        setTimeout(() => {st1.style.opacity = 1;}, (i += 100));
-        for(const child of st1.children) {
-          setTimeout(() => {child.style.opacity = 1}, (i += 3000));
-        }
-        setTimeout(() => {st1.style.opacity = 0;}, (i += 2000));
-        setTimeout(() => {st1.style.display = "none";}, (i += 1000));
-
-        setTimeout(() => {st2.style.display = "initial";}, (i += 900));
-        setTimeout(() => {st2.style.opacity = 1;}, (i += 100));
-        for(const child of st2.children) {
-          setTimeout(() => {child.style.opacity = 1}, (i += 3000));
-        }
-        setTimeout(() => {st2.style.opacity = 0;}, (i += 2000));
-        setTimeout(() => {st2.style.display = "none";}, (i += 1000));
-
-        setTimeout(() => {st3.style.display = "initial";}, (i += 900));
-        setTimeout(() => {st3.style.opacity = 1;}, (i += 100));
-        for(const child of st3.children) {
-          setTimeout(() => {child.style.opacity = 1}, (i += 3000));
-        }
-        setTimeout(() => {st3.style.opacity = 0;}, (i += 2000));
-        setTimeout(() => {st3.style.display = "none";}, (i += 1000));
-
-        setTimeout(() => {st4.style.display = "initial";}, (i += 900));
-        setTimeout(() => {st4.style.opacity = 1;}, (i += 100));
-        for(const child of st4.children) {
-          setTimeout(() => {child.style.opacity = 1}, (i += 3000));
-        }
-        setTimeout(() => {st4.style.opacity = 0;}, (i += 2000));
-        setTimeout(() => {st4.style.display = "none";}, (i += 1000));
-
-        setTimeout(() => {st5.style.display = "initial";}, (i += 900));
-        setTimeout(() => {st5.style.opacity = 1;}, (i += 100));
-        for(const child of st5.children) {
-          setTimeout(() => {child.style.opacity = 1}, (i += 3000));
-        }
-        setTimeout(() => {st5.style.opacity = 0;}, (i += 2000));
-        setTimeout(() => {st5.style.display = "none";}, (i += 1000));
+        i = createFade(document.getElementById('st1'), i);
+        i = createFade(document.getElementById('st2'), i);
+        i = createFade(document.getElementById('st3'), i);
+        i = createFade(document.getElementById('st4'), i);
+        i = createFade(document.getElementById('st5'), i);
 
         var clock = document.querySelector('.clock-div');
         setTimeout(() => {clock.style.width = "100vw";}, (i += 1000));
+      }
+
+      function createFade(div, time) {
+        setTimeout(() => {st1.style.display = "initial";}, (time += 900));
+        setTimeout(() => {st1.style.opacity = 1;}, (time += 100));
+        for(const child of st1.children) {
+          setTimeout(() => {child.style.opacity = 1}, (time += 3000));
+        }
+        setTimeout(() => {st1.style.opacity = 0;}, (time += 2000));
+        setTimeout(() => {st1.style.display = "none";}, (time += 1000));
+        return time;
       }
     </script>
   </head>
@@ -191,24 +183,4 @@
       </div>
     </div>
   </body>
-  <!--
-  O tempo é o que resume a gente
-  Todo tempo contigo é insuficiente
-
-  Pra falar a verdade
-
-  O tempo contigo é diferente
-  Meu tempo com você te tenho nos braços
-  Meu tempo sem você te tenho na mente
-
-  Quanto tempo a gente esteve longe?
-  Eu não sei
-  Mas o tempo nunca foi eterno
-  E a distância nunca foi o suficiente
-
-  Pois como os ponteiros de um relógio
-  Mesmo que eles se afastem um do outro
-  Eu sei que alguma hora
-  Eles vão se encontrar novamente
-  -->
 </html>
