--- a/index.html
+++ b/index.html
@@ -123,6 +123,26 @@ Eles vão se encontrar novamente
         transition: 1s;
         display: none;
       }
+
+      @media screen and (max-width: 1080px) {
+        img {
+          width: 80%;
+        }
+
+        body {
+          flex-direction: column;
+        }
+
+        .clock-div {
+          width: 100%;
+          height: 50vh;
+        }
+
+        .poem-div {
+          align-items: center;
+          justify-content: center;
+        }
+      }
     </style>
     <script type="text/javascript">
       function onBodyLoad() {
@@ -135,7 +155,11 @@ Eles vão se encontrar novamente
         i = createFade(document.getElementById('st5'), i);
 
         var clock = document.querySelector('.clock-div');
-        setTimeout(() => {clock.style.width = "100vw";}, (i += 1000));
+        var poem = document.querySelector('.poem-div');
+        setTimeout(() => {
+          clock.style.width = "100vw";
+          clock.style.height = "100vh";
+        }, (i += 1000));
       }
 
       function createFade(div, time) {
